--- a/realestate-frontend/src/routes/homePage/homePage.scss
+++ b/realestate-frontend/src/routes/homePage/homePage.scss
@@ -1,3 +1,5 @@
+@import "../../responsive.scss";
+
 .homePage {
   display: flex;
   height: 100%;
@@ -13,16 +15,43 @@
       gap: 50px;
       height: 100%;
 
+      @include md {
+        padding: 0;
+      }
+
+      @include sm {
+        justify-content: flex-start;
+      }
+
       .title {
         font-size: 64px;
+
+        @include lg {
+          font-size: 48%;
+        }
+      }
+
+
+      .description {
+        font-size: 24px;
+        font-weight: 300;
+
       }
 
       .boxes {
         display: flex;
         justify-content: space-between;
 
+        @include sm {
+          display: none;
+        }
+
         h1 {
           font-size: 36px;
+
+          @include lg {
+            font-size: 32px;
+          }
         }
 
         h2 {
@@ -37,11 +66,21 @@
     flex: 2;
     background-color: #fcf5f3;
     position: relative;
+    display: flex;
+    align-content: center;
+
+    @include md {
+      display: none;
+    }
 
     img {
       width: 115%;
       position: absolute;
       right: 0;
+
+      @include lg {
+        width: 105%;
+      }
 
     }
   }
